fix: Add ontology title and visualization of the ontology in the documentation.

--- a/OnToology/xdvp.owl/OnToology.cfg
+++ b/OnToology/xdvp.owl/OnToology.cfg
@@ -1,6 +1,6 @@
 [widoco]
 enable = true
-webvowl = false
+webvowl = true
 languages = en
 
 [ar2dtool]
@@ -14,4 +14,3 @@ enable = true
 
 [themis]
 enable = false
-
